--- a/index.html
+++ b/index.html
@@ -2,253 +2,132 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Myle Community | Build Your First Online Income 💡</title>
   <meta name="description" content="Join Myle Community — India's fastest-growing student community helping young people earn, learn, and grow through online work opportunities." />
   <link rel="icon" href="https://i.ibb.co/27S5hrzd/favicon.png" type="image/png" />
-  <meta property="og:title" content="Myle Community | Build Your First Online Income 💡" />
-  <meta property="og:description" content="Learn how students are earning their first online income through Myle Community. Real opportunities. Real mentorship." />
-  <meta property="og:image" content="https://i.ibb.co/d0GWDs92/logo.png" />
-  <meta property="og:url" content="https://mylecommunity.in" />
-  <meta name="twitter:card" content="summary_large_image" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #F4F8FC;
-      color: #1B2735;
-      overflow-x: hidden;
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{font-family:'Poppins',sans-serif;background:#F4F8FC;color:#0f172a;overflow-x:hidden;}
+
+    /* HERO */
+    header{
+      position:relative;text-align:center;padding:7rem 1.5rem;
+      background:linear-gradient(135deg,#0E141A,#1A2635,#24384D);
+      color:#fff;overflow:hidden;z-index:1;
+    }
+    header h1{font-size:2.3rem;font-weight:700;margin-bottom:1rem;position:relative;z-index:2;}
+    header p{font-size:1.05rem;opacity:.9;max-width:760px;margin:0 auto;position:relative;z-index:2;}
+    .btn{
+      margin-top:1.8rem;background:#ff6f61;color:#fff;font-weight:600;border:none;
+      padding:.9rem 2rem;border-radius:40px;cursor:pointer;font-size:1rem;transition:.25s;position:relative;z-index:3;
+    }
+    .btn:hover{background:#ff897e;transform:translateY(-2px)}
+    header::after{
+      content:'';position:absolute;inset:0;z-index:0;
+      background:url('thar-karanveer.jpg') center/cover no-repeat;opacity:.15;mix-blend-mode:soft-light;
     }
 
-    /* Header */
-    header {
-      position: relative;
-      text-align: center;
-      padding: 7rem 2rem;
-      background: linear-gradient(135deg, #1F2937, #334155, #0F172A);
-      color: #fff;
-    }
-    header::before {
-      content: '';
-      background: url('https://i.ibb.co/6cCZwqQ5/Thar-Founder.jpg') center/cover no-repeat;
-      position: absolute;
-      top: 0; left: 0; width: 100%; height: 100%;
-      opacity: 0.25; z-index: 0;
-    }
-    header h1 {
-      position: relative; z-index: 1;
-      font-size: 2.4rem; font-weight: 700;
-      text-shadow: 0 2px 6px rgba(0,0,0,0.3);
-    }
-    header p {
-      margin-top: 1rem; font-size: 1.1rem;
-      opacity: .95; position: relative; z-index: 1;
-    }
-    .cta-btn {
-      margin-top: 2rem;
-      background: #FF6F61;
-      color: #fff;
-      font-weight: 600;
-      border: none;
-      padding: 0.9rem 2.2rem;
-      border-radius: 40px;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: 0.3s;
-      position: relative; z-index: 1;
-    }
-    .cta-btn:hover { background: #FF897E; transform: scale(1.05); }
+    /* ABOUT */
+    section.about{background:#fff;padding:4rem 1.5rem;text-align:center;}
+    .about h2{font-size:2rem;margin-bottom:1.2rem}
+    .about p{max-width:860px;margin:0 auto 1.1rem;font-size:1.05rem;color:#334155}
 
-    /* About Section */
-    section.about {
-      padding: 4rem 2rem;
-      text-align: center;
-      background: #fff;
-      border-radius: 25px 25px 0 0;
-    }
-    .about h2 {
-      font-size: 1.9rem;
-      margin-bottom: 1.5rem;
-      color: #1B2735;
-    }
-    .about p {
-      font-size: 1rem;
-      max-width: 700px;
-      margin: 0 auto 2rem;
-      line-height: 1.6;
-    }
+    /* CAROUSEL (stable JS, fixed aspect) */
+    .carousel{position:relative;margin:3rem auto;width:min(1100px,92%);border-radius:18px;overflow:hidden;background:#fff;
+      box-shadow:0 8px 24px rgba(0,0,0,.08)}
+    .track{display:flex;transition:transform .6s ease-in-out}
+    .slide{min-width:100%;height:460px;position:relative;background:#0b1220}
+    .slide img{width:100%;height:100%;object-fit:cover;display:block;image-rendering:auto}
+    .cap{position:absolute;left:0;right:0;bottom:0;padding:.7rem 1rem;text-align:center;color:#fff;
+      font-weight:600;text-shadow:0 2px 8px rgba(0,0,0,.6);
+      background:linear-gradient(180deg,rgba(0,0,0,0) 0,rgba(0,0,0,.55) 100%)}
+    .dots{position:absolute;left:0;right:0;bottom:14px;display:flex;gap:8px;justify-content:center}
+    .dot{width:8px;height:8px;border-radius:50%;background:rgba(255,255,255,.55);transition:.2s;cursor:pointer}
+    .dot.active{background:#ff6f61;transform:scale(1.2)}
 
-    /* Carousel */
-    .carousel {
-      position: relative;
-      max-width: 100%;
-      overflow: hidden;
-      margin: 3rem auto;
-      width: 90%;
-      border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-    }
-    .slides {
-      display: flex;
-      width: 400%;
-      animation: slide 16s infinite;
-    }
-    .slides img {
-      width: 100%;
-      flex-shrink: 0;
-      height: 450px;
-      object-fit: cover;
-    }
-    @keyframes slide {
-      0% { transform: translateX(0); }
-      25% { transform: translateX(-100%); }
-      50% { transform: translateX(-200%); }
-      75% { transform: translateX(-300%); }
-      100% { transform: translateX(0); }
-    }
-    .caption {
-      position: absolute;
-      bottom: 20px;
-      left: 0;
-      width: 100%;
-      text-align: center;
-      color: #fff;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.4);
-      font-weight: 600;
-      background: rgba(0,0,0,0.25);
-      padding: 0.6rem 0;
-    }
+    /* METRICS */
+    .metrics{background:#fff;padding:4rem 1.5rem;text-align:center}
+    .metrics h2{font-size:1.9rem;margin-bottom:2rem}
+    .metrics-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1.6rem;max-width:1050px;margin:0 auto}
+    .metric{background:#f9fbfd;border-radius:14px;padding:2rem;box-shadow:0 6px 16px rgba(0,0,0,.06)}
+    .metric h3{font-size:2rem;color:#1e3a8a;margin-bottom:.6rem}
+    .metric p{color:#334155}
 
-    /* Metrics Section */
-    .metrics {
-      background: #fff;
-      padding: 4rem 2rem;
-      text-align: center;
-    }
-    .metrics h2 {
-      font-size: 1.9rem;
-      margin-bottom: 2rem;
-      color: #1B2735;
-    }
-    .metrics-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-    }
-    .metric {
-      background: #F9FBFF;
-      border-radius: 20px;
-      padding: 2rem;
-      width: 300px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-    }
-    .metric h3 {
-      color: #1E3A8A;
-      font-size: 2.2rem;
-      font-weight: 700;
-      margin-bottom: 0.6rem;
-    }
-    .metric p { color: #333; font-size: 1rem; line-height: 1.5; }
+    /* FAQ */
+    .faq{padding:4rem 1.5rem;background:#f9fbfd;text-align:center}
+    .faq h2{font-size:1.9rem;margin-bottom:1.4rem}
+    .accordion{max-width:820px;margin:0 auto;text-align:left}
+    details{background:#fff;margin-bottom:1rem;border-radius:12px;padding:1.1rem 1.3rem;box-shadow:0 4px 12px rgba(0,0,0,.08);transition:all .3s}
+    summary{font-weight:600;color:#1e3a8a;cursor:pointer;display:flex;justify-content:space-between;align-items:center}
+    details[open]{background:#eef4fb}
+    details p{margin-top:.65rem;color:#334155}
+    summary::after{content:'+';font-weight:700;transition:transform .25s}
+    details[open] summary::after{transform:rotate(45deg)}
 
-    /* FAQ Section */
-    .faq {
-      padding: 4rem 2rem;
-      background: #F8FAFC;
-      text-align: center;
-    }
-    .faq h2 {
-      font-size: 1.9rem;
-      margin-bottom: 2rem;
-      color: #1B2735;
-    }
-    details {
-      background: #fff;
-      border-radius: 10px;
-      margin: 1rem auto;
-      max-width: 700px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-      padding: 1rem 1.5rem;
-      text-align: left;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
-    details summary {
-      font-weight: 600;
-      color: #1E3A8A;
-      font-size: 1.1rem;
-      list-style: none;
-    }
-    details[open] summary { color: #FF6F61; }
-    details p {
-      margin-top: 0.6rem;
-      color: #333;
-      font-size: 0.95rem;
-      line-height: 1.5;
-    }
+    /* POPUP (fixed + hidden by default) */
+    .popup{display:none;position:fixed;inset:0;background:rgba(0,0,0,.5);backdrop-filter:blur(6px);
+      align-items:center;justify-content:center;z-index:40}
+    .popup.active{display:flex}
+    .box{background:#fff;border-radius:20px;border:3px solid transparent;border-image:linear-gradient(135deg,#A7C7E7,#FF6F61) 1;
+      width:min(540px,92%);overflow:hidden;box-shadow:0 12px 30px rgba(0,0,0,.22)}
+    .box-head{background:linear-gradient(135deg,#A7C7E7,#6A93CB);color:#fff;text-align:center;font-weight:600;padding:1rem}
+    .box iframe{width:100%;height:540px;border:0}
+    .close{position:absolute;top:18px;right:26px;color:#fff;font-size:2rem;cursor:pointer}
 
-    /* Footer */
-    footer {
-      text-align: center;
-      background: linear-gradient(135deg, #2C5364, #203A43, #0F2027);
-      color: #eee;
-      padding: 2.5rem 1rem;
-      font-size: 0.9rem;
-      margin-top: 3rem;
-    }
-    footer a {
-      color: #A7C7E7;
-      text-decoration: none;
-      margin: 0 0.3rem;
-    }
-    footer a:hover { text-decoration: underline; }
+    /* FOOTER */
+    footer{margin-top:3rem;text-align:center;background:linear-gradient(135deg,#2C5364,#203A43,#0F2027);color:#eaeef2;padding:2.3rem 1rem}
+    footer a{color:#A7C7E7;text-decoration:none}
+    footer a:hover{text-decoration:underline}
 
-    /* Responsive */
-    @media(max-width:768px) {
-      header h1 { font-size: 1.8rem; }
-      .slides img { height: 280px; }
-      .metric { width: 85%; }
+    @media (max-width:768px){
+      header h1{font-size:1.85rem}
+      .slide{height:320px}
     }
   </style>
 </head>
-
 <body>
-  <!-- HEADER -->
+
+  <!-- HERO -->
   <header>
     <h1>Know How You Can Build Your First Online Income Using Social Media 🌍</h1>
     <p>Join India’s fastest-growing student community helping young people earn, learn, and grow through online work opportunities.</p>
-    <button class="cta-btn" onclick="togglePopup()">Fill the form & get personal guidance 💡</button>
+    <button class="btn" onclick="togglePopup()">Fill the form & get personal guidance 💡</button>
   </header>
 
-  <!-- ABOUT SECTION -->
+  <!-- ABOUT -->
   <section class="about">
     <h2>How Students Are Earning From Home</h2>
-    <p>
-      <b>Myle Community</b> is helping students across India start <b>earning online using social media</b>.
-      We teach you how to use your phone, communication, and digital tools to build your first income source —
-      step by step.
-    </p>
-    <p>
-      Everything we do is beginner-friendly. You don’t need followers, technical skills, or prior experience.
-      You’ll get guidance, mentorship, and a community that actually works together to help each other grow.
-    </p>
-    <p>
-      So if you’ve ever wanted to learn how to make money online in a genuine way — this is where it begins.
-    </p>
-    <button class="cta-btn" onclick="togglePopup()">Get Complete Details 💡</button>
+    <p><b>Myle Community</b> helps students across India start <b>earning online using social media</b>. Learn to use your phone, communication, and simple systems to build your first income — step by step.</p>
+    <p>No followers or experience needed. You get mentorship, clarity, and a student community that grows together.</p>
+    <button class="btn" onclick="togglePopup()">Get Complete Details 💡</button>
   </section>
 
-  <!-- CAROUSEL -->
-  <div class="carousel">
-    <div class="slides">
-      <img src="thar-karanveer.jpg" alt="Founder with Thar">
-      <img src="meeting.jpg" alt="Community Meeting">
-      <img src="trophy.png" alt="Award">
-      <img src="suraj-phuket.jpg" alt="Lifestyle">
+  <!-- CAROUSEL (uses local high-res files at repo root) -->
+  <section class="carousel">
+    <div class="track" id="track">
+      <div class="slide">
+        <img src="thar-karanveer.jpg" alt="Founder with Thar">
+        <div class="cap">Led by vision. Built with belief. Empowering thousands.</div>
+      </div>
+      <div class="slide">
+        <img src="meeting.jpg" alt="Community Meeting">
+        <div class="cap">Students across India connecting and learning together.</div>
+      </div>
+      <div class="slide">
+        <img src="trophy.png" alt="Award">
+        <div class="cap">Recognized for leadership and community excellence.</div>
+      </div>
+      <div class="slide">
+        <img src="suraj-phuket.jpg" alt="Lifestyle">
+        <div class="cap">Exploring growth, mentorship, and rewards through teamwork.</div>
+      </div>
     </div>
-    <div class="caption" id="caption">Led by vision. Built with belief. Empowering thousands.</div>
-  </div>
+    <div class="dots" id="dots">
+      <span class="dot active"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
+    </div>
+  </section>
 
   <!-- METRICS -->
   <section class="metrics">
@@ -272,80 +151,85 @@
   <!-- FAQ -->
   <section class="faq">
     <h2>Got Questions? We’ve Got You Covered 💬</h2>
-    <details>
-      <summary>What exactly is Myle Community?</summary>
-      <p>Myle Community is a trusted network of students learning how to earn online through digital tools, mentorship, and real systems — all guided step by step.</p>
-    </details>
-    <details>
-      <summary>Do I need experience or money to start?</summary>
-      <p>No experience needed. You’ll be guided step-by-step, and everything is explained personally so you can start your journey smoothly.</p>
-    </details>
-    <details>
-      <summary>What happens after I fill the form?</summary>
-      <p>Once you fill the form, our team will contact you personally and explain everything step-by-step — including how to begin your online journey.</p>
-    </details>
+    <div class="accordion">
+      <details>
+        <summary>What exactly is Myle Community?</summary>
+        <p>Myle is a student-led platform that helps you learn to earn online using social media and simple digital systems — guided by people who’ve already done it.</p>
+      </details>
+      <details>
+        <summary>Do I need experience or money to start?</summary>
+        <p>No experience needed. We explain everything personally so you can begin confidently with full clarity.</p>
+      </details>
+      <details>
+        <summary>What happens after I fill the form?</summary>
+        <p>We’ll contact you via call or WhatsApp and explain the steps, time needed, and how to start easily from your phone or laptop.</p>
+      </details>
+    </div>
+    <button class="btn" onclick="togglePopup()">Get Started Today 💡</button>
   </section>
 
-  <!-- POPUP FORM -->
-  <div class="popup" id="formPopup">
-    <div class="popup-box">
-      <div class="popup-header">Fill this form and we’ll contact you personally 💡</div>
+  <!-- POPUP (hidden by default) -->
+  <div class="popup" id="popup">
+    <div class="box">
+      <div class="box-head">Fill this form and we’ll contact you personally 💡</div>
       <iframe src="https://forms.mylecommunity.in/myle/form/CopyLetsWorkwithMYLECommunity/formperma/ZlYN-IAQH0qp87lh1672fU_wKykKqtkWMJsEupWEWJQ" loading="lazy"></iframe>
     </div>
-    <div class="close-btn" onclick="togglePopup()">×</div>
+    <div class="close" onclick="togglePopup()">×</div>
   </div>
 
   <!-- FOOTER -->
   <footer>
     <p>Myle Community is a verified digital education initiative.</p>
     <p>Contact: <a href="mailto:support@mylecommunity.in">support@mylecommunity.in</a></p>
-    <p>
-      <a href="https://www.instagram.com/myle_community/" target="_blank">@myle_community</a> |
-      <a href="https://www.instagram.com/karanveersingh_24/" target="_blank">@karanveersingh_24</a>
-    </p>
-    <p><a href="https://mylecommunity.in/privacy" target="_blank">Privacy Policy</a></p>
+    <p><a href="https://www.instagram.com/myle_community/" target="_blank">@myle_community</a> | <a href="https://www.instagram.com/karanveersingh_24/" target="_blank">@karanveersingh_24</a></p>
   </footer>
 
   <script>
-    // Carousel captions
-    const captions = [
-      "Led by vision. Built with belief. Empowering thousands.",
-      "Students across India connecting and learning together.",
-      "Recognized for leadership and community excellence.",
-      "Exploring growth, mentorship, and rewards through teamwork."
-    ];
-    let idx = 0;
-    setInterval(() => {
-      idx = (idx + 1) % captions.length;
-      document.getElementById("caption").textContent = captions[idx];
-    }, 4000);
+    /* Popup */
+    function togglePopup(){ document.getElementById('popup').classList.toggle('active'); }
+    window.togglePopup = togglePopup;
 
-    // Popup toggle
-    function togglePopup() {
-      document.getElementById("formPopup").classList.toggle("active");
+    /* Carousel (stable) */
+    const track = document.getElementById('track');
+    const dots = Array.from(document.getElementById('dots').children);
+    const slides = document.querySelectorAll('.slide');
+    let i = 0, N = slides.length, timer;
+
+    function go(n){
+      i = (n + N) % N;
+      track.style.transform = `translateX(-${i*100}%)`;
+      dots.forEach((d,idx)=>d.classList.toggle('active', idx===i));
     }
+    function play(){ timer = setInterval(()=>go(i+1), 4500); }
+    function stop(){ clearInterval(timer); }
 
-    // Animated counters
-    const counters = document.querySelectorAll(".counter");
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          const counter = entry.target;
-          const target = +counter.getAttribute("data-target");
-          let count = 0;
-          const step = Math.ceil(target / 100);
-          const update = () => {
-            count += step;
-            if (count >= target) count = target;
-            counter.textContent = count.toLocaleString() + "+";
-            if (count < target) requestAnimationFrame(update);
+    dots.forEach((d,idx)=> d.addEventListener('click', ()=>{ stop(); go(idx); play(); }));
+
+    // Pause on hover (desktop), resume on leave
+    track.addEventListener('mouseenter', stop);
+    track.addEventListener('mouseleave', play);
+
+    play(); // start
+
+    /* Metrics counter with + suffix */
+    const counters = document.querySelectorAll('.counter');
+    const obs = new IntersectionObserver(entries=>{
+      entries.forEach(entry=>{
+        if(entry.isIntersecting){
+          const el = entry.target;
+          const target = +el.dataset.target;
+          let n = 0, step = Math.max(1, Math.ceil(target/100));
+          const tick = ()=>{
+            n += step; if(n>target) n = target;
+            el.textContent = n.toLocaleString() + '+';
+            if(n<target) requestAnimationFrame(tick);
           };
-          update();
-          observer.unobserve(counter);
+          tick();
+          obs.unobserve(el);
         }
       });
-    }, { threshold: 0.4 });
-    counters.forEach(c => observer.observe(c));
+    }, {threshold:.4});
+    counters.forEach(c=>obs.observe(c));
   </script>
 </body>
 </html>
